[workspace]
resolver = "2"
members = [ 
    "amm", 
    "constant-product-curve", 
    # "escrow-improve", 
    "escrow-native", 
    # "experimental-loader", 
    "fundraiser", 
    # "escrow-optimized",
    "hello_basic", 
    "vault_native", 
    "vault_optimized", "voting_optimized",
#    "vault_based", not working on my arch
]

[workspace.package]
authors = ["Native Solana Programs by KoX"]
homepage = "https://cognis.es"
repository = "https://github.com/kox/native-rust-programs"
license = "Apache-2.0"

[workspace.dependencies]
bytemuck = "1.19.0"
five8_const = "0.1.3"
mollusk-svm = { git = "https://github.com/deanmlittle/mollusk" }
mollusk-token = { git = "https://github.com/deanmlittle/mollusk" }
pinocchio = "0.6.0"
pinocchio-system = "0.2.0"
pinocchio-token = "0.2.0"
solana-nostd-sha256 = "0.1.3"
solana-program = "=2.0.15"
solana-program-test = "=2.0.15"
solana-sdk = "=2.0.15"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
