[package]
name = "amm"
version = "0.1.0"
edition = "2021"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.solana]
program-id = "22222222222222222222222222222222222222222222"
program-dependencies = []
account-dependencies = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
constant-product-curve = { path = "../constant-product-curve" }
five8_const = { workspace = true }
pinocchio = { workspace = true }
pinocchio-system = { workspace = true}
pinocchio-token = { workspace = true}
solana-nostd-sha256 =  { workspace =  true }

[dev-dependencies]
mollusk-svm = { workspace = true }
mollusk-token = { workspace = true }
solana-sdk = { workspace = true }
spl-token = { workspace = true }

[features]
test-sbf = []
no-entrypoint = []