[package]
name = "escrow-improve"
version = "0.1.0"
edition = "2021"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
pinocchio = { workspace = true }
pinocchio-system = { workspace = true}
pinocchio-token = { workspace = true}
bytemuck = { workspace = true }
# solana-program = "2.0.10"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "5.0.2", features = ["no-entrypoint"] }
thiserror = "1.0.64"
five8_const = { workspace = true }