[package]
name = "experimental-loader"
version = "0.1.0"
edition = "2021"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
pinocchio = { workspace = true }
pinocchio-system = { workspace = true}
pinocchio-token = { workspace = true}
bytemuck = { workspace = true }
five8_const = { workspace = true }
solana-nostd-sha256 = { workspace = true }

[dev-dependencies]
mollusk-svm = { workspace = true }
mollusk-svm-programs-token = { workspace = true }
solana-sdk = { workspace = true }
spl-token = { workspace = true }

[features]
test-sbf = []
