[package]
name = "vault_based"
version = "0.1.0"
edition = "2021"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
mollusk-svm = { workspace = true }
solana-sdk = { workspace = true }

[features]
test-sbf = []