[package]
name = "vault_optimized"
version = "0.1.0"
edition = "2021"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.solana]
program-id = "22222222222222222222222222222222222222222222"
program-dependencies = []
account-dependencies = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
five8_const = { workspace = true }
pinocchio = { workspace = true }
solana-nostd-sha256 = { workspace = true }

[dev-dependencies]
mollusk-svm = { workspace = true }
solana-sdk = { workspace = true }

[features]
test-sbf = []
